--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEKA</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="grid-container">
-        <p><h1>HELLO</h1></p>
-        <header></header>
-        <nav></nav>
+        <header>
+            <img class="rmit-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/RMIT_University_Logo.svg/2560px-RMIT_University_Logo.svg.png" alt="RMIT's logo">
+            <img class="weka-logo" src="https://dashboard.snapcraft.io/site_media/appmedia/2021/10/weka.png" alt="WEKA's logo">
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Preprocess</a></li>
+                <li><a href="">Classify</a></li>
+                <li><a href="">Cluster</a></li>
+                <li><a href="">Associate</a></li>
+                <li><a href="">Select attributes</a></li>
+                <li><a href="">Visualise</a></li>
+                <li><a href="help.html">Help</a></li>
+            </ul>
+        </nav>
         <footer></footer>
     </div>
 </body>
