--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,22 +9,26 @@
 </head>
 <body>
     <div class="grid-container">
-        <header>
-            <img class="rmit-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/RMIT_University_Logo.svg/2560px-RMIT_University_Logo.svg.png" alt="RMIT's logo">
-            <img class="weka-logo" src="https://dashboard.snapcraft.io/site_media/appmedia/2021/10/weka.png" alt="WEKA's logo">
-        </header>
-        <nav>
+
+        <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Preprocess</a></li>
-                <li><a href="">Classify</a></li>
-                <li><a href="">Cluster</a></li>
-                <li><a href="">Associate</a></li>
-                <li><a href="">Select attributes</a></li>
-                <li><a href="">Visualise</a></li>
-                <li><a href="help.html">Help</a></li>
+                <div class="left-nav">
+                    <img class="rmit-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/RMIT_University_Logo.svg/2560px-RMIT_University_Logo.svg.png" alt="RMIT's logo">
+                    <img class="weka-logo" src="https://dashboard.snapcraft.io/site_media/appmedia/2021/10/weka.png" alt="WEKA's logo">
+                </div>
+                <div class="right-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Preprocess</a></li>
+                    <li><a href="">Classify</a></li>
+                    <li><a href="">Cluster</a></li>
+                    <li><a href="">Associate</a></li>
+                    <li><a href="">Select attributes</a></li>
+                    <li><a href="">Visualise</a></li>
+                    <li><a href="help.html">Help</a></li>
+                </div>
             </ul>
         </nav>
+
         <footer></footer>
     </div>
 </body>
