--- a/Frontend/help.html
+++ b/Frontend/help.html
@@ -8,11 +8,29 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="grid-container">
-        <p><h1>This is the help page</h1></p>
-        <header></header>
-        <nav></nav>
-        <footer></footer>
+<div class="grid-container">
+
+    <div class="left-nav">
+        <img class="rmit-logo" src="https://keypath.uk.com/sites/uk/files/styles/half_width_600w_/public/image/2020-07/Rmit-White.png?itok=hUXxaWnz" alt="RMIT's logo">
+        <img class="weka-logo" src="https://dashboard.snapcraft.io/site_media/appmedia/2021/10/weka.png" alt="WEKA's logo">
     </div>
+    <div class="right-nav">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Preprocess</a></li>
+                <li><a href="">Classify</a></li>
+                <li><a href="">Cluster</a></li>
+                <li><a href="">Associate</a></li>
+                <li><a href="">Select attributes</a></li>
+                <li><a href="">Visualise</a></li>
+                <li><a href="help.html">Help</a></li>
+            </ul>
+        </nav>
+    </div>
+    <footer>
+        <li><a href="about.html">About us</a></li>
+    </footer>
+</div>
 </body>
 </html>
