--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEKA</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+<!--    <script src="index.js"></script>-->
 </head>
 <body>
     <div class="grid-container">
 
         <div class="left-nav">
-            <img class="rmit-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/RMIT_University_Logo.svg/2560px-RMIT_University_Logo.svg.png" alt="RMIT's logo">
+            <img class="rmit-logo" src="https://keypath.uk.com/sites/uk/files/styles/half_width_600w_/public/image/2020-07/Rmit-White.png?itok=hUXxaWnz" alt="RMIT's logo">
             <img class="weka-logo" src="https://dashboard.snapcraft.io/site_media/appmedia/2021/10/weka.png" alt="WEKA's logo">
         </div>
         <div class="right-nav">
@@ -27,8 +28,31 @@
                     <li><a href="help.html">Help</a></li>
                 </ul>
             </nav>
+            <section class="video-section">
+                <div class="video-content">
+                    <h1 id="text" style="font-size: 50px"></h1>
+                    <script src="app.js"></script>
+                </div>
+                <div class="video">
+                    <video autoplay muted loop id="myVideo">
+                        <source src="videos/weka_video.mp4"
+                                type="video/mp4">
+                        <!-- alt text -->
+                        The web browser cannot support mp4
+                    </video>
+                </div>
+            </section>
+            <br>
+            <br>
+            <br>
+            <br>
+            <section class="file-upload">
+                <h1>Start by uploading a database file</h1>
+            </section>
         </div>
-        <footer></footer>
+        <footer>
+            <li><a href="about.html">About us</a></li>
+        </footer>
     </div>
 </body>
 </html>
