--- a/Frontend/help.html
+++ b/Frontend/help.html
@@ -6,6 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEKA</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        .helpContent {
+            font-size: 20px;
+            padding-left: 500px;
+            text-align: center;
+            float: left;
+            width: 50%;
+            margin: 20px 0px 20px 0px;
+        }
+        .line {
+            clear: both;
+            border-bottom: 2px solid #ddd;
+            margin: 0 0 15px;
+        }
+        .content-three {
+            font-size: 20px;
+            padding-left: 350px;
+            text-align: left;
+            float: left;
+            width: 9%;
+            margin: 0px 0px 20px 20px;
+            
+        }
+        p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+        }
+        ul {
+            list-style-type: square;
+        }
+        
+    </style>    
 </head>
 <body>
 <div class="grid-container">
@@ -27,6 +62,73 @@
                 <li><a href="help.html">Help</a></li>
             </ul>
         </nav>
+    </div>
+
+    <div class="helpContent">
+        <h1>Weka 3: Machine Learning Software in Java</h1>
+        <p>
+            Weka is a collection of machine learning algorithms for data mining
+            tasks. It contains tools for data preparation, classification, regression, clustering, association
+            rules mining, and visualization.
+        </p>
+        <p>
+        Found only on the islands of New Zealand, the Weka is a
+        flightless bird with an inquisitive nature. The name is
+        pronounced like "way·kuh"
+            and the bird sounds like
+            <a href="https://www.youtube.com/shorts/l3AcsjO29Ow">this</a>.
+        </p>
+        <p>
+            Weka is open source software issued under the
+            <a href="https://www.gnu.org/licenses/gpl.html" target="_blank">GNU General Public License</a>.
+        </p>
+        <p>
+            We have put together several
+            <a href="https://www.cs.waikato.ac.nz/ml/weka/courses.html" target="_blank">free online courses</a>
+            that teach machine learning and data mining using Weka. The videos for the courses are available
+            <a href="https://www.youtube.com/user/WekaMOOC" target="_blank">on Youtube</a>.
+        </p>
+        <p>
+            Weka supports
+            <a href="https://deeplearning.cms.waikato.ac.nz">deep learning</a>!
+        </p>
+        <p> </p>
+    </div>
+
+    <div class="line"></div>
+
+    <div class="content-three">
+        Getting started
+        <ul>
+            <li><a href="https://waikato.github.io/weka-wiki/requirements/">Requirements</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/downloading_weka/">Download</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/documentation/">Documentation</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/faq/">FAQ</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/getting_help/">Getting Help</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="content-three">
+        Further information
+        <ul>
+            <li><a href="https://waikato.github.io/weka-wiki/citing_weka/">Citing Weka</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/datasets/">Datasets</a>
+        </li><li><a href="https://waikato.github.io/weka-wiki/academic/related_projects/">Related Projects</a>
+        </li><li><a href="https://www.cs.waikato.ac.nz/~ml/weka/miscellaneous.html">Miscellaneous Code</a>
+        </li><li><a href="https://waikato.github.io/weka-wiki/literature/">Other Literature</a>
+        </li></ul>
+    </div>
+
+    <div class="content-three">
+        Developers
+        <ul>
+            <li><a href="https://waikato.github.io/weka-wiki/development/">Development</a>
+            </li><li><a href="https://waikato.github.io/weka-wiki/history/">History</a>
+        </li><li><a href="https://waikato.github.io/weka-wiki/development/#source-code-repository">Subversion</a>
+        </li><li><a href="https://waikato.github.io/weka-wiki/development/#code-credits">Contributors</a>
+        </li><li><a href="https://waikato.github.io/weka-wiki/faqs/commercial_applications/">Commercial licenses</a>
+        </li></ul>
     </div>
     <footer>
         <li><a href="about.html">About us</a></li>
