--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEKA</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="react_app/src/Pages/style.css">
     <!--    <script src="index.js"></script>-->
 </head>
 
@@ -33,33 +33,33 @@
                 <li><a href="help.html">Help</a></li>
             </ul>
         </nav>
-        <section class="video-section">
-            <div class="video-content">
-                <h1 id="text" style="font-size: 50px"></h1>
-                <script src="app.js"></script>
-            </div>
-            <div class="video">
-                <video autoplay muted loop id="myVideo">
-                    <source src="videos/weka_video.mp4"
-                            type="video/mp4">
-                    <!-- alt text -->
-                    The web browser cannot support mp4
-                </video>
-            </div>
-        </section>
-        <br>
-        <br>
-        <br>
-        <br>
-        <section class="file-upload">
-
-            <h1>Start by uploading a database file</h1>
-            <br>
-            <input id="upload-files" type="file" style="display: none;" accept=".arff,.arff.gz,.names,.data,.csv,.json,.json.gz,
-.libsvm,.m,.dat,.bsi,.xrff,.xrff.gz"/>
-            <label class="uploadFile" for="upload-files">Upload File</label>
-        </section>
     </div>
+    <section class="video-section">
+        <div class="video-content">
+            <h1 id="text" style="font-size: 50px"></h1>
+            <script src="app.js"></script>
+        </div>
+        <div class="video">
+            <video autoplay muted loop id="myVideo">
+                <source src="react_app/src/Videos/weka_video.mp4"
+                        type="video/mp4">
+                <!-- alt text -->
+                The web browser cannot support mp4
+            </video>
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section class="file-upload">
+
+        <h1>Start by uploading a database file</h1>
+        <br>
+        <input id="upload-files" type="file" style="display: none;" accept=".arff,.arff.gz,.names,.data,.csv,.json,.json.gz,
+.libsvm,.m,.dat,.bsi,.xrff,.xrff.gz"/>
+        <label class="uploadFile" for="upload-files">Upload File</label>
+    </section>
     <footer>
         <li><a href="about.html">About us</a></li>
     </footer>
