--- a/Frontend/preprocess.html
+++ b/Frontend/preprocess.html
@@ -86,6 +86,20 @@
     <input type="submit" value="Apply">
   </form>
 
+  <form action="preprocess.html" id="removeAttribute">
+    <label for="index">Attribute's index to be removed:</label>
+    <input type="number" id="index" name="index"><br><br>
+    <input type="submit" value="OK">
+  </form>
+
+  <form action="preprocess.html" id="removeConstant">
+    <label for="nominal">Nominal String Replacement Value:</label>
+    <input type="text" id="nominal" name="nominal"><br><br>
+    <label for="numerical">Numeric Replacement Value:</label>
+    <input type="text" id="numerical" name="numerical"><br><br>
+    <input type="submit" value="OK">
+  </form>
+
   <br>
   <footer>
     <li><a href="about.html">About us</a></li>
