about team in contact us page

--- a/Frontend/contactUs.html
+++ b/Frontend/contactUs.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEKA</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!--    <script src="index.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="react_app/src/Pages/style.css">
+
     <style>
 
         input[type=text], select, textarea {
@@ -83,12 +83,36 @@
         </form>
     </div>
 
-    <div className = "Social-Media">
-        <a href = "https://www.facebook.com/"><i className="fa fa-facebook-official w3-hover-opacity"></i></a>
-        <a href = "https://www.instagram.com/"><i className="fa fa-instagram w3-hover-opacity"></i></a>
-        <a href = "https://www.twitter.com/"><i className="fa fa-twitter w3-hover-opacity"></i></a>
-        <a href = "https://www.linkedin.com/"><i className="fa fa-linkedin w3-hover-opacity"></i></a>
+    <h2 style="text-align: center;margin-bottom: 16px;">Our Team</h2>
+    <div style="text-align: center;">
+            <div style="float: left; width: 20%">
+                <h4>Zhihong Deng</h4>
+                <p>s3860863@student.rmit.edu.au</p>
+            </div>
+
+            <div style="float: left; width: 20%">
+                <h4>Sai Sreshtaa Turaga</h4>
+                <p>s3814571@student.rmit.edu.au</p>
+            </div>
+
+            <div style="float: left; width: 20%">
+                <h4>Christoper Adrianus Sindarto</h4>
+                <p>s3738844@student.rmit.edu.au</p>
+            </div>
+
+            <div style="float: left; width: 20%">
+                <h4>Yitao Ma</h4>
+                <p>s3843689@student.rmit.edu.au</p>
+            </div>
+
+            <div style="float: left; width: 20%">
+                <h4>Zehu Liu</h4>
+                <p>s3845938@student.rmit.edu.au</p>
+            </div>
+
+        </div>
     </div>
+
 
     <footer>
         <li><a href="about.html">About us</a></li>
